fix the overflow

--- a/final-project-main/final-project.css
+++ b/final-project-main/final-project.css
@@ -13,7 +13,6 @@ body {
     color: rgb(255, 255, 255);
     overflow: hidden;
     font-family: 'IBM Plex Mono', monospace;
-    overflow: hidden;
     overflow-y: hidden;
     overflow-x: hidden;
 
